--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityConnect">
+        <activity android:name=".activities.ActivityConnect">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +27,7 @@
                 <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CoffeeActivity" />
-        <activity android:name=".NFC"></activity>
+        <activity android:name=".activities.CoffeeActivity" />
     </application>
 
 </manifest>
